# nurcemal-ne-halin

./: Cargo.toml  README.md
presentation/: presentation.md
src/: camera.rs  emotion.rs  error.rs  image_manager.rs  lib.rs  main.rs  models.rs  ui.rs
